--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -140,6 +140,13 @@ stages:
       displayName: 'Use .NET SDK $(dotnetSdkVersion)'
       inputs:
         version: '$(dotnetSdkVersion)'
+    - task: NuGetCommand@2
+      displayName: 'Restore project dependencies'
+      inputs:
+        command: 'restore'
+        restoreSolution: '**/*.sln'
+        feedsToUse: 'select'
+        vstsFeed: '$(System.TeamProject)/Tailspin.SpaceGame.Web.Models'
     - task: DotNetCoreCLI@2
       displayName: 'Build the project - $(buildConfiguration)'
       inputs:
